feat: add virtual list comp

--- a/src/pages/virtual-list.less
+++ b/src/pages/virtual-list.less
@@ -1,8 +1,7 @@
-.toast {
-  position: fixed;
+.item {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100vw;
-  height: 100vh;
+  border: 1px solid #000;
+  border-radius: 4px;
 }
